# pycrunch-trace

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
pycrunch_trace/: config.py  logging-configuration.yaml
pycrunch_trace/client/api/: network_client.py  trace.py
pycrunch_trace/client/networking/: ClientOutgoingQueueThread.py
pycrunch_trace/client/networking/strategies/: s3_strategy.py
pycrunch_trace/demo/: demo_decorators.py  demo_golden.py
pycrunch_trace/events/: file_contents_in_protobuf.pyx
pycrunch_trace/file_system/: chunked_trace.py  persisted_session.py  session_store.py  trace_file.py
pycrunch_trace/filters/: CustomFileFilter.py  DefaultFileFilter.py
pycrunch_trace/native/: native_tracer.pyx
pycrunch_trace/server/: recording_server_websocket.py  trace_persistance.py
pycrunch_trace/tests/: test_file_chunks.py
pycrunch_trace/tracing/: inline_profiler.py  perf.py
